project (halley-core)

find_Package(SDL2 REQUIRED)

include_directories(${SDL2_INCLUDE_DIR} "include" "include/halley/core" "../utils/include" "../entity/include")

set(SOURCES
        "src/api/halley_api.cpp"
        "src/core/core_runner.cpp"
        "src/core/environment.cpp"
        "src/graphics/camera.cpp"
        "src/graphics/material/material.cpp"
        "src/graphics/material/material_definition.cpp"
        "src/graphics/material/material_parameter.cpp"
        "src/graphics/painter.cpp"
        "src/graphics/render_context.cpp"
        "src/graphics/render_target/render_target_screen.cpp"
        "src/graphics/render_target/render_target_texture.cpp"
        "src/graphics/shader.cpp"
        "src/graphics/sprite/animation.cpp"
        "src/graphics/sprite/animation_player.cpp"
        "src/graphics/sprite/sprite.cpp"
        "src/graphics/sprite/sprite_painter.cpp"
        "src/graphics/sprite/sprite_sheet.cpp"
        "src/graphics/text/font.cpp"
        "src/graphics/text/text_renderer.cpp"
        "src/graphics/texture.cpp"
        "src/graphics/texture_descriptor.cpp"
        "src/input/input_button_base.cpp"
        "src/input/input.cpp"
        "src/input/input_joystick.cpp"
        "src/input/input_joystick_sdl.cpp"
        "src/input/input_joystick_xinput.cpp"
        "src/input/input_keyboard_concrete.cpp"
        "src/input/input_keys.cpp"
        "src/input/input_manual.cpp"
        "src/input/input_mouse_concrete.cpp"
        "src/input/input_touch.cpp"
        "src/input/input_vibration.cpp"
        "src/input/input_virtual.cpp"
        "src/resources/resource_collection.cpp"
        "src/resources/resource_data_reader.cpp"
        "src/resources/resource_filesystem.cpp"
        "src/resources/resource_locator.cpp"
        "src/resources/resource_pack.cpp"
        "src/resources/resources.cpp"
        "src/resources/standard_resources.cpp"
        "src/sdl/system_sdl.cpp"
        "src/stage/entity_stage.cpp"
        "src/stage/stage.cpp"
        "src/utils/world_stats.cpp"
        )

set(HEADERS
        "include/halley/core/api/core_api.h"
        "include/halley/core/api/halley_api.h"
        "include/halley/core/api/halley_api_internal.h"
        "include/halley/core/api/input_api.h"
        "include/halley/core/api/system_api.h"
        "include/halley/core/api/video_api.h"
        "include/halley/core/external/irunner.h"
        "include/halley/core/game/core_runner.h"
        "include/halley/core/game/environment.h"
        "include/halley/core/game/game.h"
        "include/halley/core/graphics/blend.h"
        "include/halley/core/graphics/camera.h"
        "include/halley/core/graphics/material/material_definition.h"
        "include/halley/core/graphics/material/material.h"
        "include/halley/core/graphics/material/material_parameter.h"
        "include/halley/core/graphics/material/uniform_type.h"
        "include/halley/core/graphics/painter.h"
        "include/halley/core/graphics/render_context.h"
        "include/halley/core/graphics/render_target/render_target.h"
        "include/halley/core/graphics/render_target/render_target_screen.h"
        "include/halley/core/graphics/render_target/render_target_texture.h"
        "include/halley/core/graphics/shader.h"
        "include/halley/core/graphics/sprite/animation.h"
        "include/halley/core/graphics/sprite/animation_player.h"
        "include/halley/core/graphics/sprite/sprite.h"
        "include/halley/core/graphics/sprite/sprite_painter.h"
        "include/halley/core/graphics/sprite/sprite_sheet.h"
        "include/halley/core/graphics/text/font.h"
        "include/halley/core/graphics/text/text_renderer.h"
        "include/halley/core/graphics/texture_descriptor.h"
        "include/halley/core/graphics/texture.h"
        "include/halley/core/halley_core.h"
        "include/halley/core/input/input_button_base.h"
        "include/halley/core/input/input_device.h"
        "include/halley/core/input/input.h"
        "include/halley/core/input/input_joystick.h"
        "include/halley/core/input/input_joystick_sdl.h"
        "include/halley/core/input/input_joystick_xinput.h"
        "include/halley/core/input/input_keyboard_concrete.h"
        "include/halley/core/input/input_keyboard.h"
        "include/halley/core/input/input_keys.h"
        "include/halley/core/input/input_manual.h"
        "include/halley/core/input/input_mouse_concrete.h"
        "include/halley/core/input/input_mouse.h"
        "include/halley/core/input/input_touch.h"
        "include/halley/core/input/input_vibration.h"
        "include/halley/core/input/input_virtual.h"
        "include/halley/core/resources/resource_collection.h"
        "include/halley/core/resources/resource_data_reader.h"
        "include/halley/core/resources/resource_filesystem.h"
        "include/halley/core/resources/resource_locator.h"
        "include/halley/core/resources/resource_pack.h"
        "include/halley/core/resources/resources.h"
        "include/halley/core/resources/standard_resources.h"
        "include/halley/core/sdl/system_sdl.h"
        "include/halley/core/stage/entity_stage.h"
        "include/halley/core/stage/stage.h"
        "include/halley/core/stage/stage_id.h"
        "include/halley/core/utils/world_stats.h"
        "include/halley/halley_main.h"
        "include/halley/main_wrapper.h"
        "src/prec.h"
        )

add_library (halley-core ${SOURCES} ${HEADERS})