project (halley-core)

include_directories(${Boost_INCLUDE_DIR} "include" "include/halley/core" "../utils/include" "../entity/include" "../audio/include" "../net/include")

set(SOURCES
        "src/api/halley_api.cpp"
        
        "src/dummy/dummy_audio.cpp"
        "src/dummy/dummy_input.cpp"
        "src/dummy/dummy_plugins.cpp"
        "src/dummy/dummy_network.cpp"
        "src/dummy/dummy_system.cpp"
        "src/dummy/dummy_video.cpp"

        "src/game/core.cpp"
        "src/game/environment.cpp"
        "src/game/halley_main.cpp"
		"src/game/halley_statics.cpp"

        "src/graphics/camera.cpp"
        "src/graphics/material/material.cpp"
        "src/graphics/material/material_definition.cpp"
        "src/graphics/material/material_parameter.cpp"
        "src/graphics/painter.cpp"
        "src/graphics/render_context.cpp"
        "src/graphics/render_target/render_target_texture.cpp"
        "src/graphics/shader.cpp"
        "src/graphics/sprite/animation.cpp"
        "src/graphics/sprite/animation_player.cpp"
        "src/graphics/sprite/sprite.cpp"
        "src/graphics/sprite/sprite_painter.cpp"
        "src/graphics/sprite/sprite_sheet.cpp"
        "src/graphics/text/font.cpp"
        "src/graphics/text/text_renderer.cpp"
        "src/graphics/texture.cpp"
        "src/graphics/texture_descriptor.cpp"

        "src/input/input_button_base.cpp"
        "src/input/input_device.cpp"
        "src/input/input_joystick.cpp"
        "src/input/input_joystick_xinput.cpp"
        "src/input/input_manual.cpp"
        "src/input/input_touch.cpp"
        "src/input/input_vibration.cpp"
        "src/input/input_virtual.cpp"

        "src/resources/asset_database.cpp"
        "src/resources/resource_collection.cpp"
        "src/resources/resource_filesystem.cpp"
        "src/resources/resource_locator.cpp"
        "src/resources/resources.cpp"
        "src/resources/standard_resources.cpp"

        "src/stage/entity_stage.cpp"
        "src/stage/stage.cpp"

        "src/ui/ui_event.cpp"
        "src/ui/ui_input.cpp"
        "src/ui/ui_painter.cpp"
        "src/ui/ui_parent.cpp"
        "src/ui/ui_root.cpp"
        "src/ui/ui_sizer.cpp"
        "src/ui/ui_style.cpp"
        "src/ui/ui_stylesheet.cpp"
        "src/ui/ui_validator.cpp"
        "src/ui/ui_widget.cpp"

        "src/ui/widgets/ui_button.cpp"
        "src/ui/widgets/ui_checkbox.cpp"
        "src/ui/widgets/ui_clickable.cpp"
        "src/ui/widgets/ui_dropdown.cpp"
        "src/ui/widgets/ui_gamepad_image.cpp"
        "src/ui/widgets/ui_hybrid_list.cpp"
        "src/ui/widgets/ui_image.cpp"
        "src/ui/widgets/ui_label.cpp"
        "src/ui/widgets/ui_list.cpp"
        "src/ui/widgets/ui_scroll_pane.cpp"
        "src/ui/widgets/ui_scrollbar.cpp"
        "src/ui/widgets/ui_scrollbar_pane.cpp"
        "src/ui/widgets/ui_textinput.cpp"
        
        "src/utils/world_stats.cpp"
        )

set(HEADERS
        "src/dummy/dummy_audio.h"
        "src/dummy/dummy_input.h"
        "src/dummy/dummy_plugins.h"
        "src/dummy/dummy_network.h"
        "src/dummy/dummy_system.h"
        "src/dummy/dummy_video.h"

        "include/halley/core/api/audio_api.h"
        "include/halley/core/api/core_api.h"
        "include/halley/core/api/halley_api.h"
        "include/halley/core/api/halley_api_internal.h"
        "include/halley/core/api/input_api.h"
        "include/halley/core/api/network_api.h"
        "include/halley/core/api/system_api.h"
        "include/halley/core/api/video_api.h"
        
        "include/halley/core/game/core.h"
        "include/halley/core/game/environment.h"
        "include/halley/core/game/game.h"
        "include/halley/core/game/halley_main.h"
		"include/halley/core/game/halley_statics.h"
        
        "include/halley/core/graphics/blend.h"
        "include/halley/core/graphics/camera.h"
        "include/halley/core/graphics/material/material_definition.h"
		"include/halley/core/graphics/material/material_definition.natvis"
        "include/halley/core/graphics/material/material.h"
		"include/halley/core/graphics/material/material.natvis"
        "include/halley/core/graphics/material/material_parameter.h"
        "include/halley/core/graphics/material/uniform_type.h"
        "include/halley/core/graphics/painter.h"
        "include/halley/core/graphics/render_context.h"
        "include/halley/core/graphics/render_target/render_target.h"
        "include/halley/core/graphics/render_target/render_target_screen.h"
        "include/halley/core/graphics/render_target/render_target_texture.h"
        "include/halley/core/graphics/shader.h"
        "include/halley/core/graphics/sprite/animation.h"
        "include/halley/core/graphics/sprite/animation_player.h"
        "include/halley/core/graphics/sprite/sprite.h"
        "include/halley/core/graphics/sprite/sprite_painter.h"
        "include/halley/core/graphics/sprite/sprite_sheet.h"
        "include/halley/core/graphics/text/font.h"
        "include/halley/core/graphics/text/text_renderer.h"
        "include/halley/core/graphics/texture_descriptor.h"
        "include/halley/core/graphics/texture.h"
		"include/halley/core/graphics/window.h"
        
        "include/halley/core/halley_core.h"
        
        "include/halley/core/input/input_button_base.h"
        "include/halley/core/input/input_device.h"
        "include/halley/core/input/input_joystick.h"
        "include/halley/core/input/input_joystick_xinput.h"
        "include/halley/core/input/input_keys.h"
        "include/halley/core/input/input_manual.h"
        "include/halley/core/input/input_touch.h"
        "include/halley/core/input/input_vibration.h"
        "include/halley/core/input/input_virtual.h"
        
        "include/halley/core/resources/asset_database.h"
        "include/halley/core/resources/resource_collection.h"
        "include/halley/core/resources/resource_filesystem.h"
        "include/halley/core/resources/resource_locator.h"
        "include/halley/core/resources/resources.h"
        "include/halley/core/resources/standard_resources.h"

        "include/halley/core/stage/entity_stage.h"
        "include/halley/core/stage/stage.h"
        "include/halley/core/stage/stage_id.h"

        "include/halley/core/ui/ui_element.h"
        "include/halley/core/ui/ui_event.h"
        "include/halley/core/ui/ui_input.h"
        "include/halley/core/ui/ui_painter.h"
        "include/halley/core/ui/ui_parent.h"
        "include/halley/core/ui/ui_root.h"
        "include/halley/core/ui/ui_sizer.h"
        "include/halley/core/ui/ui_style.h"
        "include/halley/core/ui/ui_stylesheet.h"
        "include/halley/core/ui/ui_validator.h"
        "include/halley/core/ui/ui_widget.h"

        "include/halley/core/ui/widgets/ui_button.h"
        "include/halley/core/ui/widgets/ui_checkbox.h"
        "include/halley/core/ui/widgets/ui_clickable.h"
        "include/halley/core/ui/widgets/ui_dropdown.h"
        "include/halley/core/ui/widgets/ui_gamepad_image.h"
        "include/halley/core/ui/widgets/ui_hybrid_list.h"
        "include/halley/core/ui/widgets/ui_image.h"
        "include/halley/core/ui/widgets/ui_label.h"
        "include/halley/core/ui/widgets/ui_list.h"
        "include/halley/core/ui/widgets/ui_scroll_pane.h"
        "include/halley/core/ui/widgets/ui_scrollbar.h"
        "include/halley/core/ui/widgets/ui_scrollbar_pane.h"
        "include/halley/core/ui/widgets/ui_textinput.h"
        
        "include/halley/core/utils/world_stats.h"
        "src/prec.h"
        )

assign_source_group(${SOURCES})
assign_source_group(${HEADERS})

add_library (halley-core ${SOURCES} ${HEADERS})
target_link_libraries(halley-core halley-entity halley-utils halley-audio)
